--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -12,6 +12,8 @@
         android:background="@color/white"
         android:isScrollContainer="true"
         android:orientation="vertical"
+        android:padding="0dp"
+        android:layout_margin="0dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -20,8 +22,10 @@
                 android:isScrollContainer="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:padding="0dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="80dp"
                 tools:listitem="@layout/item_directlist"
                 />
 
