--- a/app/src/main/res/layout/item_directlist.xml
+++ b/app/src/main/res/layout/item_directlist.xml
@@ -1,13 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="0dp"
+    android:layout_margin="0dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:orientation="horizontal"
         android:padding="0dp"
+        android:layout_margin="0dp"
+        app:flow_horizontalAlign="start"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="65dp"
+        tools:ignore="MissingConstraints">
+
+        <FrameLayout
+            android:id="@+id/RatingFrame"
+            android:layout_width="17dp"
+            android:padding="0dp"
+            android:layout_margin="0dp"
+            android:layout_height="match_parent">
+        </FrameLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:padding="0dp"
+            android:layout_width="100dp"
+            android:layout_margin="0dp"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/aclogo"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="0dp" />
+
+            <TextView
+                android:id="@+id/acname"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="center"
+                android:textSize="12sp"
+                android:layout_margin="0dp"
+                android:padding="0dp"
+                android:layout_marginBottom="10dp"
+                android:textColor="@color/black">
+            </TextView>
+
+        </LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
@@ -15,116 +60,102 @@
             android:layout_width="70dp"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/aclogo"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="0dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="0dp" />
-
-            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/acname"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="8dp"
-                android:layout_margin="0dp"
-                android:padding="0dp"
-                android:textColor="@color/black">
-            </TextView>
-
-        </LinearLayout>
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:background="@color/white"
-            android:orientation="vertical"
-            android:padding="0dp"
-            android:layout_width="70dp"
-            android:layout_height="match_parent">
-
-            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+            <TextView
                 android:id="@+id/timedep"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="12dp"
-                android:layout_marginLeft="0dp"
+                android:textSize="16sp"
+                android:layout_marginStart="0dp"
                 android:layout_marginTop="10dp"
                 android:padding="0dp"
                 android:textColor="@color/black">
             </TextView>
 
-            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+            <TextView
                 android:id="@+id/deppoint"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="0dp"
                 android:padding="0dp"
-                android:textSize="12dp"
+                android:textSize="16sp"
                 android:textColor="@color/black">
             </TextView>
 
         </LinearLayout>
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:background="@color/white"
+        <LinearLayout
             android:orientation="vertical"
-            android:padding="0dp"
-            android:layout_width="70dp"
+            android:paddingStart="0dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="0dp"
+            android:layout_width="80dp"
             android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/planepic"
-                android:layout_width="12dp"
-                android:layout_height="12dp"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="0dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="0dp" />
 
-            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+            <TextView
                 android:id="@+id/durtext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:layout_margin="0dp"
                 android:padding="0dp"
-                android:textSize="10dp"
+                android:textSize="12sp"
                 android:textColor="@color/black">
             </TextView>
 
         </LinearLayout>
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:background="@color/white"
+        <LinearLayout
             android:orientation="vertical"
             android:padding="0dp"
             android:layout_width="70dp"
             android:layout_height="match_parent">
 
-            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+            <TextView
                 android:id="@+id/timearr"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="12dp"
-                android:layout_marginLeft="0dp"
+                android:textSize="16sp"
+                android:layout_marginStart="0dp"
                 android:layout_marginTop="10dp"
                 android:padding="0dp"
                 android:textColor="@color/black">
             </TextView>
 
-            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+            <TextView
                 android:id="@+id/arrpoint"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="0dp"
                 android:padding="0dp"
-                android:textSize="12dp"
+                android:textSize="16sp"
                 android:textColor="@color/black">
             </TextView>
 
         </LinearLayout>
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="10dp"
+            android:id="@+id/cntrating"
+            android:textSize="12sp"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:background="@drawable/round_box_green"
+            android:layout_width="25sp"
+            android:layout_height="25sp">
+        </TextView>
 
     </LinearLayout>
 
