--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="sa_green">#92C55A</color>
     <color name="sa_yellow">#F9AA33</color>
     <color name="sa_red">#FF643B</color>
+    <color name="sa_transparent">#00FFFFFF</color>
 </resources>
