--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -93,7 +93,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:background="@color/lightgray"
-                    android:layout_height="2px" />
+                    android:layout_height="1dp" />
 
                 <TextView
                     android:id="@+id/destination"
@@ -129,7 +129,7 @@
             android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:background="@color/lightgray"
-            android:layout_height="1px" />
+            android:layout_height="1dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -220,4 +220,22 @@
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/spinner_home"
+        android:translationZ="2dp"
+        android:background="@color/sa_transparent"
+        android:visibility="invisible"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/loading_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateTintMode="src_atop"
+            android:indeterminateTint="@color/staff_blue"
+            android:layout_marginStart="180dp"
+            android:layout_gravity="center_vertical" />
+    </LinearLayout>
+
+ </androidx.constraintlayout.widget.ConstraintLayout>
