--- a/app/src/main/res/layout/item_directlist.xml
+++ b/app/src/main/res/layout/item_directlist.xml
@@ -61,12 +61,22 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:textSize="10sp"
+                android:text="@string/next_day_label"
+                android:textAlignment="textEnd"
+                android:textColor="@color/white"
+                android:padding="0dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </TextView>
+
+            <TextView
                 android:id="@+id/timedep"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:layout_marginStart="0dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="0dp"
                 android:padding="0dp"
                 android:textColor="@color/black">
             </TextView>
@@ -121,12 +131,23 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/nextDay"
+                android:textSize="10sp"
+                android:textColor="@color/black"
+                android:text="@string/next_day_label"
+                android:textAlignment="textEnd"
+                android:padding="0dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </TextView>
+
+            <TextView
                 android:id="@+id/timearr"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:layout_marginStart="0dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="0dp"
                 android:padding="0dp"
                 android:textColor="@color/black">
             </TextView>
