--- a/app/src/main/res/layout/fragment_flight.xml
+++ b/app/src/main/res/layout/fragment_flight.xml
@@ -1,13 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="0dp"
+    android:layout_margin="0dp"
+    android:background="@color/white"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.flight.FlightFragment">
 
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:layout_margin="0dp"
+        app:flow_verticalAlign="top"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        tools:ignore="MissingConstraints">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="0dp"
+            android:layout_margin="0dp"
+            tools:ignore="MissingConstraint"
+            >
+
+            <ImageView
+                android:id="@+id/aclogo_one"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="0dp" />
+
+            <TextView
+                android:id="@+id/acname_one"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="textStart"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:layout_margin="0dp"
+                android:padding="0dp"
+                android:textColor="@color/black">
+            </TextView>
+
+            <ImageView
+                android:src="@drawable/bell"
+                android:layout_width="match_parent"
+                android:layout_height="22dp"
+                 />
+
+            <TextView
+                android:text="5"
+                android:textColor="@color/staff_blue"
+                android:textSize="16sp"
+                android:background="@color/white"
+                android:id="@+id/lbSubLost"
+                android:layout_height="34dp"
+                android:layout_width="wrap_content"
+                />
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
