--- a/app/src/main/res/layout/item_directlist.xml
+++ b/app/src/main/res/layout/item_directlist.xml
@@ -64,7 +64,7 @@
                 android:textSize="10sp"
                 android:text="@string/next_day_label"
                 android:textAlignment="textEnd"
-                android:textColor="@color/white"
+                android:textColor="@color/sa_full_transparent"
                 android:padding="0dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
