--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,10 +12,10 @@
                 tools:layout="@layout/fragment_home"/>
 
             <fragment
-                android:id="@+id/navigation_dashboard"
-                android:name="com.stukalov.staffairlines.pro.ui.dashboard.DashboardFragment"
-                android:label="@string/title_dashboard"
-                tools:layout="@layout/fragment_dashboard" />
+                android:id="@+id/navigation_favourites"
+                android:name="com.stukalov.staffairlines.pro.ui.favourites.FavouritesFragment"
+                android:label="@string/title_favourites"
+                tools:layout="@layout/fragment_favourites" />
 
             <fragment
                 android:id="@+id/navigation_notifications"
