--- a/app/src/main/res/layout/item_directlist.xml
+++ b/app/src/main/res/layout/item_directlist.xml
@@ -153,7 +153,7 @@
                 <TextView
                     android:id="@+id/nextDay"
                     android:textSize="10sp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/sa_full_transparent"
                     android:text="@string/next_day_label"
                     android:textAlignment="textEnd"
                     android:padding="0dp"
@@ -193,7 +193,7 @@
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:background="@drawable/round_box_green"
+                android:background="@drawable/round_box_white"
                 android:layout_width="25sp"
                 android:layout_height="25sp">
             </TextView>
