--- a/app/src/main/res/layout/fragment_permitted_ac.xml
+++ b/app/src/main/res/layout/fragment_permitted_ac.xml
@@ -5,36 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:id="@+id/selpoint"
-    tools:context=".ui.sel_point.SelACFragment">
+    android:id="@+id/showpermitt"
+    tools:context=".ui.sel_ac.ShowPermittFragment">
 
     <LinearLayout
         android:background="@color/white"
         android:isScrollContainer="true"
         android:orientation="vertical"
+        android:padding="0dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <EditText
-            android:id="@+id/selpointtext"
-            android:layout_marginTop="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+        <TextView
             android:layout_width="match_parent"
-            android:textSize="15sp"
-            android:hint="Name of airport/city or IATA code"
-            android:textColorHint="@color/hint_text"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="There will be only these airlines in the search results."
             android:textColor="@color/black"
-            android:layout_height="40dp" />
+            android:textSize="15sp"
+            />
 
             <ListView
-                android:id="@+id/pointlistview"
+                android:id="@+id/permittlistview"
                 android:isScrollContainer="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                tools:listitem="@layout/item_pointlist"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="0dp"
+                tools:listitem="@layout/item_aclist"
                 />
 
     </LinearLayout>
