--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:id="@+id/resultfragment"
-    tools:context=".ui.result.ResultFragment">
+    tools:context=".ui.result.TransferFragment">
 
     <LinearLayout
         android:background="@color/white"
@@ -26,6 +26,7 @@
             tools:ignore="MissingConstraints">
 
             <LinearLayout
+                android:id="@+id/TabDirect"
                 android:orientation="vertical"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
@@ -41,14 +42,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="37dp" />
                 <ImageView
-                    android:background="@color/staff_blue"
+                    android:background="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="3dp" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/TabTransfers"
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
@@ -64,25 +64,55 @@
                     android:layout_width="match_parent"
                     android:layout_height="37dp" />
                 <ImageView
-                    android:background="@color/white"
+                    android:background="@color/staff_blue"
                     android:layout_width="match_parent"
                     android:layout_height="3dp" />
             </LinearLayout>
 
         </LinearLayout>
 
-            <ListView
-                android:id="@+id/directlistview"
-                android:isScrollContainer="true"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="0dp"
-                android:layout_marginLeft="2dp"
-                android:layout_marginRight="2dp"
-                android:layout_marginTop="10dp"
-                tools:listitem="@layout/item_directlist"
-                />
+        <TextView
+            android:id="@+id/tvInfoTransfer"
+            android:text="Searching for optimal stopovers..."
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginStart="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <ListView
+            android:id="@+id/transferlistview"
+            android:isScrollContainer="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="0dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_marginTop="10dp"
+            tools:listitem="@layout/item_transferlist" />
 
     </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/spinner_transfer"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/overlay_back"
+        android:elevation="4dp"
+        android:translationZ="4dp"
+        android:visibility="gone"
+        tools:ignore="MissingConstraints">
+
+        <ProgressBar
+            android:id="@+id/loading_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:indeterminateTint="@color/staff_blue"
+            android:indeterminateTintMode="src_atop" />
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
