--- a/app/src/main/res/layout/item_transferlist.xml
+++ b/app/src/main/res/layout/item_transferlist.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="0dp"
-    android:layout_margin="0dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_margin="0dp">
 
     <LinearLayout
             android:orientation="horizontal"
             android:padding="0dp"
             android:layout_margin="0dp"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             tools:ignore="MissingConstraints">
 
         <TextView
             android:id="@+id/transfer_name"
-            android:text="London (LON), England"
-            android:layout_width="wrap_content"
+            android:text="London Heathrow Airport (LHR), United Kingdom"
             android:layout_weight="10"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textSize="16sp"
             android:layout_marginStart="20dp"
             android:textAlignment="textStart"
@@ -34,16 +35,14 @@
             android:text="5 7 9"
             android:textAlignment="textStart"
             android:gravity="center"
-            android:layout_weight="2"
             android:textColor="@color/black"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
             tools:ignore="RtlCompat" />
 
         <TextView
             android:text="›"
-            android:layout_width="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="20dp"
             android:layout_height="match_parent"
             android:textAlignment="center"
             android:layout_marginEnd="20dp"
